# JWInventoryAPI

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
example/: pyproject.toml
example/src/endstone_inventoryui_example/: main.py
example/src/jwinventoryapi_example/: __init__.py  main.py
src/endstone_inventoryui/: listener.py
src/endstone_inventoryui/menu/: inventory.py  menu.py
src/endstone_inventoryui/menu/graphic/: block_graphic.py  block_pair_graphic.py
src/endstone_inventoryui/network/: item_stack_wrapper.py
src/endstone_inventoryui/util/: item_utils.py  utils.py
src/jwinventoryapi/: __init__.py  listener.py  main.py
src/jwinventoryapi/manager/: player_manager.py  session.py
src/jwinventoryapi/menu/: inventory.py  menu.py  menu_type.py
src/jwinventoryapi/menu/graphic/: block_graphic.py  block_pair_graphic.py  graphic.py
src/jwinventoryapi/network/: inventory_content_packet.py  inventory_slot_packet.py  item_stack_wrapper.py  network_stack_latency_packet.py
src/jwinventoryapi/util/: item_utils.py  utils.py
