[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jwinventoryapi-example"
version = "2.0.0"
dependencies = ["jwinventoryapi"]
authors = [
    { name = "Shock95", email = "" },
]
description = "Example plugin for jwinventoryapi"

[project.entry-points."endstone"]
jwinventoryapi_example = "jwinventoryapi_example:Main"